--- a/Calc_IMT/Properties/Resources.resx
+++ b/Calc_IMT/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="icons8-сгибания-с-гантелями-80" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-сгибания-с-гантелями-80.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8-athlete-100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-athlete-100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3317" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3317.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
